<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:contentDescription="@string/content_description_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:id="@+id/menu_search"
        app:showAsAction="ifRoom" />

    <item
        android:contentDescription="@string/content_description_delete"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        android:id="@+id/menu_delete" />
    <item
        android:enabled="false"
        android:title=""
        android:id="@+id/placeholder" />
    <item
        android:contentDescription="@string/content_description_profile"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        android:id="@+id/menu_profile" />
    <item
        android:contentDescription="@string/content_description_setting"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"
        android:id="@+id/menu_setting" />




</menu>